# yoghurtgl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile-manual  README.md  autocompile.sh  configure.bat  configure.sh  configure_wasm.sh  main.cpp  makefile
.github/workflows/: c-cpp.yml
examples/: ecsScene.cpp  fluid.cpp  grass.cpp  load.cpp  msgBox.cpp  noScene.cpp  pathTracing.cpp  pbrDragon.cpp  terrain.cpp  textureMaps.cpp
include/: animations.h  asset_manager.h  assimp_glm_helpers.h  buffer.h  bvh.h  camera.h  ecs.h  effects.h  entities.h  importer.h  input.h  material.h  mesh.h  msgBox.h  renderer.h  serializable.h  shader.h  texture.h  timer.h  transformation.h  transformation.hpp  window.h  yoghurtgl.h
libs/: CMakeLists.txt
shaders/: BRDFPrecompute.fs  computeIrradiance.fs  computeIrradiance.vs  equirectangularToCubemap.fs  instancedSimple.vs  prefilterCubemap.fs  simple.fs  simple.vs  simple_shadow.fs  skybox.fs  skybox.vs  terrain.fs  terrain.tesc  terrain.tese  terrain.vs  trivialPosition.vs  unlit.fs  unlit.vs
shaders/error/: error.fs  error.vs
shaders/fluid/: GPTransfer.comp  PGTransfer.comp  bitonicMerge.comp  copyImage3D.comp  genSpatialLookup.comp  grid.fs  grid.vs  hashParticles.comp  particles.fs  particles.vs  repelNearest.comp  solveGrid.comp  updateParticles.comp
shaders/grass/: grass.fs  grass.vs  grassCompute.comp
shaders/include/: fluid.glsl  pathTracing.glsl  rendering.glsl
shaders/pathTracing/: normalizer.comp  tracer.comp
shaders/postProcessing/: acesFilm.fs  blur.comp  filter.comp  fxaa.fs
shaders/ui/: textureOnScreen.fs  textureOnScreen.vs
src/: animations.cpp  asset_manager.cpp  buffer.cpp  bvh.cpp  camera.cpp  ecs.cpp  effects.cpp  entities.cpp  importer.cpp  input.cpp  material.cpp  mesh.cpp  msgBox.cpp  renderer.cpp  serializable.cpp  shader.cpp  texture.cpp  transformation.cpp  window.cpp  yoghurtgl.cpp
tests/: test.cpp
